# cpp-misc

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
bmpimage/: CMakeLists.txt  idf_component.yml
bmpimage/include/BMPImage/: BMPImage.hpp
bmpimage/src/: BMPImage.cpp  Ditherer.cpp  Ditherer.hpp  bmp.cpp  bmp.h
bmpimage/tests/: CMakeLists.txt  Makefile  TestBMPImage.cpp
defer/: CMakeLists.txt
defer/examples/cmake/: CMakeLists.txt  main.cpp
defer/examples/esp-idf/: CMakeLists.txt  Makefile
defer/examples/esp-idf/main/: idf_component.yml  main.cpp
defer/include/Defer/: Defer.hpp
idflog/: CMakeLists.txt  idf_component.yml
idflog/include/Log/: Log.hpp
imagetest/: CMakeLists.txt
imagetest/include/ImageTest/: ImageTest.hpp
imagetest/src/: ImageTest.cpp
spiram-cpp/: CMakeLists.txt  README.md
spiram-cpp/examples/cmake/: CMakeLists.txt  Makefile  main.cpp
spiram-cpp/examples/esp-idf/: CMakeLists.txt
spiram-cpp/examples/esp-idf/main/: idf_component.yml  main.cpp
spiram-cpp/include/Spiram/: Allocator.hpp  EspHeapCapsCompat.hpp  Map.hpp  Memory.hpp  String.hpp  Vector.hpp
spiram-cpp/src/: Memory.cpp  String.cpp
stringutil/: CMakeLists.txt  idf_component.yml
stringutil/examples/cmake/: CMakeLists.txt  main.cpp
stringutil/examples/esp-idf/: CMakeLists.txt  sdkconfig.defaults
stringutil/examples/esp-idf/main/: idf_component.yml  main.cpp
stringutil/include/StringUtil/: StringUtil.hpp
stringutil/src/: StringUtil.cpp
unzipper/: CMakeLists.txt  idf_component.yml
unzipper/include/Unzipper/: Unzipper.hpp  UnzipperFileStream.hpp
unzipper/src/: Unzipper.cpp
